chore: update names, add Dockerfile for MongoDB

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sticky-promo-bar",
+  "name": "shopify-promobar",
   "version": "1.2.1",
   "main": "index.js",
   "author": "Tien Do <tiendq@gmail.com>",
