chore: update license

--- a/assets/mongodb/Dockerfile
+++ b/assets/mongodb/Dockerfile
@@ -4,5 +4,6 @@ EXPOSE 27017
 
 # docker build -t mongodb-dev .
 # docker run -d --name mongodb-dev1 -p 57017:27017 mongodb-dev
+# docker container start mongodb-dev1
 # docker exec -it mongodb-dev1 bash
 # mongo --port 57017
